# hypp

./: .gitignore  Cargo.toml  README.md
examples/test/: Cargo.toml  README.md
examples/test/src/: lib.rs
examples/todo/: Cargo.toml  README.md  index.html
examples/todo/src/: lib.rs
hypp_macros/: Cargo.toml
hypp_macros/src/: ast.rs  callback.rs  codegen.rs  component.rs  component_ast.rs  component_old.rs  flow.rs  gen_component.rs  gen_misc.rs  gen_patch.rs  ir.rs  lib.rs  lowering.rs  misc_codegen.rs  name.rs  namespace.rs  param.rs  patch.rs  template_ast.rs
src/: comp.rs  dom.rs  dom_index.rs  dom_vm.rs  error.rs  handle.rs  lib.rs  list.rs  namespace.rs  ns.rs  patch.rs  prelude.rs  server.rs  shim.rs  span.rs  span_util.rs  state_ref.rs  web.rs
src/html/: mod.rs
src/server/: mod.rs  server_dom.rs  server_hypp.rs  server_hypp_old.rs
src/web/: callback.rs  mod.rs
tests/: compile_basic.rs  compile_functions.rs  conditionally_empty.rs  debugging.rs  env_plan.rs
yay_macros/: Cargo.toml
yay_macros/src/: ast.rs  component.rs  ir.rs  lib.rs  markup.rs  template.rs  variable.rs
