[package]
name = "hypp_macros"
version = "0.1.0"
authors = ["Audun Halland <audun.halldand@pm.me>"]
edition = "2018"
license = "MIT"
description = "Implementation of #[component]"

[dependencies]
syn = { version = "1.0.75", features = ["full", "extra-traits"] }
quote = "1.0.9"
proc-macro2 = "1.0.24"
web-ns = { git = "https://github.com/audunhalland/web-ns" }

[dev-dependencies]
maplit = "1"

[lib]
proc-macro = true
