[package]
name = "hypp-test"
version = "0.1.0"
authors = ["Audun Halland <audun.halldand@pm.me>"]
edition = "2018"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
hypp = { path = "../../", features = ["web", "html"] }
web-sys = "0.3"
wasm-bindgen = "0.2"
tracing = "0.1"
tracing-wasm = "0.2"
